--- a/.github/workflows/push-container-images.yml
+++ b/.github/workflows/push-container-images.yml
@@ -75,6 +75,10 @@ jobs:
           
       - name: Log in to GitHub container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Try pushing new tag
+      - name: Azure login
+        uses: azure/login@v2.1.1
+        with:
+          creds: ${{ secrets.AZURE_ACI_CREDENTIALS }}
+      - name: Try pushing tag between repos
         run: |
-          docker buildx imagetools create --tag ghcr.io/particular/servicecontrol:test-move ghcr.io/particular/servicecontrol:5.2.1-alpha.0.26
+          docker buildx imagetools create --tag pswtestregistry.azurecr.io/servicecontrol:5.2.1-alpha.0.26 ghcr.io/particular/servicecontrol:5.2.1-alpha.0.26
