--- a/.github/workflows/push-container-images.yml
+++ b/.github/workflows/push-container-images.yml
@@ -75,14 +75,9 @@ jobs:
           
       - name: Log in to GitHub container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Azure login
-        uses: azure/login@v2.1.1
-        with:
-          creds: ${{ secrets.AZURE_ACI_CREDENTIALS }}
       - name: Azure Container Registry login
         run: |
-          az account set --subscription "Testing"
-          az acr login --name pswtestregistry
+          az acr login --name pswtestregistry --username pswtestregistry --password "${{ secrets.TEMP_ACR_PASSWORD }}"
       - name: Try pushing tag between repos
         run: |
           docker buildx imagetools create --tag pswtestregistry/servicecontrol:5.2.1-alpha.0.26 ghcr.io/particular/servicecontrol:5.2.1-alpha.0.26
