--- a/.github/workflows/push-container-images.yml
+++ b/.github/workflows/push-container-images.yml
@@ -80,4 +80,4 @@ jobs:
           az acr login --name pswtestregistry --username pswtestregistry --password "${{ secrets.TEMP_ACR_PASSWORD }}"
       - name: Try pushing tag between repos
         run: |
-          docker buildx imagetools create --tag pswtestregistry/servicecontrol:5.2.1-alpha.0.26 ghcr.io/particular/servicecontrol:5.2.1-alpha.0.26
+          docker buildx imagetools create --tag pswtestregistry.azurecr.io/servicecontrol:5.2.1-alpha.0.26 ghcr.io/particular/servicecontrol:5.2.1-alpha.0.26
