--- a/src/ServiceControl.RavenDB/Dockerfile
+++ b/src/ServiceControl.RavenDB/Dockerfile
@@ -4,7 +4,7 @@ FROM ravendb/ravendb:$BASETAG AS ravendb
 
 COPY src/ServiceControl.Persistence.RavenDB/RavenLicense.json /opt/RavenDB/servicecontrol-license.json
 
-ENV RAVEN_ARGS='--Setup.Mode=None --License.Eula.Accepted=true --License.Path=/opt/RavenDB/servicecontrol-license.json'
+ENV RAVEN_ARGS='--License.Eula.Accepted=true --License.Path=/opt/RavenDB/servicecontrol-license.json'
 
 LABEL org.opencontainers.image.source=https://github.com/Particular/ServiceControl \
       org.opencontainers.image.authors="Particular Software" \
