With shared validate action

--- a/.github/workflows/push-container-images.yml
+++ b/.github/workflows/push-container-images.yml
@@ -6,8 +6,6 @@ on:
         description: Full version of container image to push
         required: true
         type: string
-  # TEMPORARY
-  pull_request:
 jobs:
   push:
     runs-on: ubuntu-latest
@@ -16,63 +14,11 @@ jobs:
       run:
         shell: pwsh
     steps:
-      - name: Validate versions
+      - name: Validate build version
         id: validate
-        run: |
-          $version = "${{ inputs.version }}"
-
-          # TEMPORARY - for pull_request event trigger
-          if (-not $version) { $version = '5.2.1-alpha.0.26' }
-          
-          Write-Output "Received version: $version"
-          $isMatch = $version -match '^(?<Major>\d+)\.(?<Minor>\d+)\.(?<Patch>\d+)(-(?<PrereleaseLabel>[\w\-\.]+))?$'
-          if ( -not $isMatch)
-          {
-            throw "Invalid version ${{ inputs.version }}"
-            exit 1
-          }
-
-          Write-Output "Version ${{ inputs.version }} is valid."
-
-          $major = $Matches.Major
-          $minor = $Matches.Minor
-          $patch = $Matches.Patch
-          $prereleaseLabel = $Matches.PrereleaseLabel
-          $isPrerelease = -not -not $prereleaseLabel
-
-          # Get highest-versioned release
-          $releases = Invoke-WebRequest -Uri https://api.github.com/repos/particular/ServiceControl/releases -UseBasicParsing |
-              ConvertFrom-Json -ErrorAction Stop
-          $releasedVersions = $releases | ? Draft -eq $false | ? Prerelease -eq $false | Select-Object -ExpandProperty tag_name
-          $latestVersion = $releasedVersions | Sort-Object { [System.Version]$_ } -Descending | Select -First 1
-          Write-Output "Latest released version on GitHub = $latestVersion"
-
-          $isLatest = $false
-          if ( -not $isPrerelease ) {
-            $vNew = [System.Version]$version
-            $vPrev = [System.Version]$latestVersion
-
-            if ($vNew -ge $vPrev) {
-              $isLatest = $true
-            }
-          }
-          
-          Write-Output "Major = $major, Minor = $minor, Patch = $patch, PrereleaseLabel = $prereleaseLabel, IsPrerelease = $isPrerelease, IsLatest = $isLatest"
-
-          Write-Output "Determining tags..."
-          $tags = @($version)
-
-          if ( -not $isPrerelease ) {
-            $tags += "$major"
-            $tags += "$major.$minor"
-            if ($isLatest) {
-              $tags += 'latest'
-            }
-          }
-
-          Write-Output "Tags to apply:"
-          $tags | ForEach-Object { Write-Output " * '$_'" }
-          
+        uses: ./.github/actions/validate-version
+        with:
+          version: ${{ inputs.version }}
       - name: Log in to GitHub container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Azure Container Registry login
@@ -80,4 +26,19 @@ jobs:
           az acr login --name pswtestregistry --username pswtestregistry --password "${{ secrets.TEMP_ACR_PASSWORD }}"
       - name: Try pushing tag between repos
         run: |
-          docker buildx imagetools create --tag pswtestregistry.azurecr.io/servicecontrol:5.2.1-alpha.0.26 ghcr.io/particular/servicecontrol:5.2.1-alpha.0.26
+          $containers = @('servicecontrol', 'servicecontrol-audit', 'servicecontrol-monitoring')
+          $tags = "${{ steps.validate.outputs.container-tags }}" -Split ','
+          $sourceTag = "${{ inputs.version }}"
+          $dbArchTags = @('x64', 'arm64v8', 'arm32v7')
+
+          foreach ($tag in $tags)
+          {
+            foreach($name in $containers)
+            {
+              Write-Output "docker buildx imagetools create --tag pswtestregistry.azurecr.io/$($name):$($tag) ghcr.io/particular/$($name):$($sourceTag)"
+            }
+            foreach ($dbArch in $dbArchTags)
+            {
+              docker buildx imagetools create --tag pswtestregistry.azurecr.io/servicecontrol-ravendb:$($tag)-$($dbArch) ghcr.io/particular/servicecontrol-ravendb:$($sourceTag)-$($dbArch)
+            }
+          }
