Fix centralized location of RavenLicense.json

--- a/src/ServiceControl.RavenDB/Dockerfile
+++ b/src/ServiceControl.RavenDB/Dockerfile
@@ -2,7 +2,7 @@ ARG BASETAG
 ARG VERSION
 FROM ravendb/ravendb:$BASETAG AS ravendb
 
-COPY src/ServiceControl.Persistence.RavenDB/RavenLicense.json /opt/RavenDB/servicecontrol-license.json
+COPY src/ServiceControl.RavenDB/RavenLicense.json /opt/RavenDB/servicecontrol-license.json
 
 ENV RAVEN_ARGS='--License.Eula.Accepted=true --License.Path=/opt/RavenDB/servicecontrol-license.json'
 
