--- a/.github/workflows/push-container-images.yml
+++ b/.github/workflows/push-container-images.yml
@@ -14,6 +14,8 @@ jobs:
       run:
         shell: pwsh
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4.1.7
       - name: Validate build version
         id: validate
         uses: ./.github/actions/validate-version
