--- a/.github/workflows/clean-ghcr.yml
+++ b/.github/workflows/clean-ghcr.yml
@@ -9,12 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: ServiceControl images
+        id: primary
         uses: snok/container-retention-policy@v2.2.1
         with:
           image-names: servicecontrol
           filter-tags: pr-*, *-alpha.*
           filter-include-untagged: true
-          cut-off: A week ago UTC
+          cut-off: 3 days ago UTC
           timestamp-to-use: updated_at
           account-type: org
           org-name: particular
@@ -22,12 +23,13 @@ jobs:
           token-type: github-token
           dry-run: false
       - name: Audit images
+        id: audit
         uses: snok/container-retention-policy@v2.2.1
         with:
           image-names: servicecontrol-audit
           filter-tags: pr-*, *-alpha.*
           filter-include-untagged: true
-          cut-off: A week ago UTC
+          cut-off: 3 days ago UTC
           timestamp-to-use: updated_at
           account-type: org
           org-name: particular
@@ -35,12 +37,13 @@ jobs:
           token-type: github-token
           dry-run: false
       - name: Monitoring images
+        id: monitoring
         uses: snok/container-retention-policy@v2.2.1
         with:
           image-names: servicecontrol-monitoring
           filter-tags: pr-*, *-alpha.*
           filter-include-untagged: true
-          cut-off: A week ago UTC
+          cut-off: 3 days ago UTC
           timestamp-to-use: updated_at
           account-type: org
           org-name: particular
@@ -48,17 +51,31 @@ jobs:
           token-type: github-token
           dry-run: false
       - name: RavenDB images
+        id: raven
         uses: snok/container-retention-policy@v2.2.1
         with:
-          image-names: servicecontrol-monitoring
+          image-names: servicecontrol-ravendb
           filter-tags: pr-*, *-alpha.*
           filter-include-untagged: true
-          cut-off: A week ago UTC
+          cut-off: 3 days ago UTC
           timestamp-to-use: updated_at
           account-type: org
           org-name: particular
           token: ${{ secrets.GITHUB_TOKEN }}
           token-type: github-token
           dry-run: false
+      - name: Results
+        run: |
+          echo "Removed images:"
+          echo "  - servicecontrol: ${{ steps.primary.outputs.deleted }}"
+          echo "  - servicecontrol-audit: ${{ steps.audit.outputs.deleted }}"
+          echo "  - servicecontrol-monitoring: ${{ steps.monitoring.outputs.deleted }}"
+          echo "  - servicecontrol-ravendb: ${{ steps.raven.outputs.deleted }}"
+          echo ""
+          echo "Failures:"
+          echo "  - servicecontrol: ${{ steps.primary.outputs.failed }}"
+          echo "  - servicecontrol-audit: ${{ steps.audit.outputs.failed }}"
+          echo "  - servicecontrol-monitoring: ${{ steps.monitoring.outputs.failed }}"
+          echo "  - servicecontrol-ravendb: ${{ steps.raven.outputs.failed }}"
           
     
