--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -181,12 +181,12 @@ jobs:
           docker buildx build --push --tag ghcr.io/particular/${{ matrix.name }}:${{ env.TAG_NAME }} `
               --file src/${{ matrix.project }}/Dockerfile `
               --build-arg VERSION=${{ env.MinVerVersion }} `
-              --annotation="manifest,index:org.opencontainers.image.title=${{ matrix.name }}" `
-              --annotation="manifest,index:org.opencontainers.image.authors=Particular Software" `
-              --annotation="manifest,index:org.opencontainers.image.vendor=Particular Software" `
-              --annotation="manifest,index:org.opencontainers.image.version=${{ env.MinVerVersion }}" `
-              --annotation="manifest,index:org.opencontainers.image.source=https://github.com/Particular/ServiceControl" `
-              --annotation="manifest,index:org.opencontainers.image.documentation=https://docs.particular.net/servicecontrol/" `
+              --annotation "manifest,index:org.opencontainers.image.title=${{ matrix.name }}" `
+              --annotation "manifest,index:org.opencontainers.image.authors=Particular Software" `
+              --annotation "manifest,index:org.opencontainers.image.vendor=Particular Software" `
+              --annotation "manifest,index:org.opencontainers.image.version=${{ env.MinVerVersion }}" `
+              --annotation "manifest,index:org.opencontainers.image.source=https://github.com/Particular/ServiceControl" `
+              --annotation "manifest,index:org.opencontainers.image.documentation=https://docs.particular.net/servicecontrol/" `
               --platform linux/arm64,linux/arm,linux/amd64 .
           docker buildx imagetools inspect ghcr.io/particular/${{ matrix.name }}:${{ env.TAG_NAME }}
   db-containers:
