--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -181,12 +181,17 @@ jobs:
           docker buildx build --push --tag ghcr.io/particular/${{ matrix.name }}:${{ env.TAG_NAME }} \
               --file src/${{ matrix.project }}/Dockerfile \
               --build-arg VERSION=${{ env.MinVerVersion }} \
-              --annotation "manifest,index:org.opencontainers.image.title=${{ matrix.name }}" \
-              --annotation "manifest,index:org.opencontainers.image.authors=Particular Software" \
-              --annotation "manifest,index:org.opencontainers.image.vendor=Particular Software" \
-              --annotation "manifest,index:org.opencontainers.image.version=${{ env.MinVerVersion }}" \
-              --annotation "manifest,index:org.opencontainers.image.source=https://github.com/Particular/ServiceControl" \
-              --annotation "manifest,index:org.opencontainers.image.documentation=https://docs.particular.net/servicecontrol/" \
+              --annotation "index,manifest:org.opencontainers.image.title=${{ matrix.name }}" \
+              --annotation "org.opencontainers.image.description=Plain description" \
+              --annotation "manifest:org.opencontainers.image.description=Manifest description" \
+              --annotation "index:org.opencontainers.image.description=Index description" \
+              --annotation "manifest-descriptor:org.opencontainers.image.description=Manifest descriptor description" \
+              --annotation "index-descriptor:org.opencontainers.image.description=Index descriptor description" \
+              --annotation "index,manifest:org.opencontainers.image.authors=Particular Software" \
+              --annotation "index,manifest:org.opencontainers.image.vendor=Particular Software" \
+              --annotation "index,manifest:org.opencontainers.image.version=${{ env.MinVerVersion }}" \
+              --annotation "index,manifest:org.opencontainers.image.source=https://github.com/Particular/ServiceControl" \
+              --annotation "index,manifest:org.opencontainers.image.documentation=https://docs.particular.net/servicecontrol/" \
               --platform linux/arm64,linux/arm,linux/amd64 .
           docker buildx imagetools inspect ghcr.io/particular/${{ matrix.name }}:${{ env.TAG_NAME }}
   db-containers:
