--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -187,11 +187,14 @@ jobs:
               --annotation "index:org.opencontainers.image.title=${{ matrix.name }}" \
               --annotation "index:org.opencontainers.image.description=${{ matrix.description }}" \
               --annotation "index:org.opencontainers.image.created=$(date '+%FT%TZ')" \
+              --annotation "index:org.opencontainers.image.revision=${{ github.sha }}" \
               --annotation "index:org.opencontainers.image.authors=Particular Software" \
               --annotation "index:org.opencontainers.image.vendor=Particular Software" \
               --annotation "index:org.opencontainers.image.version=${{ env.MinVerVersion }}" \
-              --annotation "index:org.opencontainers.image.source=https://github.com/Particular/ServiceControl" \
+              --annotation "index:org.opencontainers.image.source=https://github.com/${{ github.repository }}/tree/${{ github.sha }}" \
+              --annotation "index:org.opencontainers.image.url=https://hub.docker.com/r/particular/${{ matrix.name }}" \
               --annotation "index:org.opencontainers.image.documentation=https://docs.particular.net/servicecontrol/" \
+              --annotation "index:org.opencontainers.image.base.name=mcr.microsoft.com/dotnet/sdk:8.0" \
               --platform linux/arm64,linux/arm,linux/amd64 .
           docker buildx imagetools inspect ghcr.io/particular/${{ matrix.name }}:${{ env.TAG_NAME }}
   db-containers:
