--- a/src/ServiceControl/ServiceControl.csproj
+++ b/src/ServiceControl/ServiceControl.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -16,8 +16,8 @@
   <Import Project="..\ProjectReferences.Transports.props" />
 
   <ItemGroup>
-    <ProjectReference Include="..\Particular.LicensingComponent\Particular.LicensingComponent.csproj"/>
-    <ProjectReference Include="..\ServiceControl.Api\ServiceControl.Api.csproj"/>
+    <ProjectReference Include="..\Particular.LicensingComponent\Particular.LicensingComponent.csproj" />
+    <ProjectReference Include="..\ServiceControl.Api\ServiceControl.Api.csproj" />
     <ProjectReference Include="..\ServiceControl.Configuration\ServiceControl.Configuration.csproj" />
     <ProjectReference Include="..\ServiceControl.Infrastructure.Metrics\ServiceControl.Infrastructure.Metrics.csproj" />
     <ProjectReference Include="..\ServiceControl.Infrastructure\ServiceControl.Infrastructure.csproj" />
