--- a/.github/workflows/push-container-images.yml
+++ b/.github/workflows/push-container-images.yml
@@ -54,3 +54,35 @@ jobs:
               Write-Output "::endgroup::"
             }
           }
+      - name: Update Docker Hub Description - ServiceControl
+        #if: ${{ steps.validate.outputs.latest == 'true' }}
+        uses: peter-evans/dockerhub-description@v4.0.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: particular/servicecontrol
+          readme-filepath: ./Container-README.md
+      - name: Update Docker Hub Description - Audit
+        #if: ${{ steps.validate.outputs.latest == 'true' }}
+        uses: peter-evans/dockerhub-description@v4.0.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: particular/servicecontrol-audit
+          readme-filepath: ./Container-README.md
+      - name: Update Docker Hub Description - Monitoring
+        #if: ${{ steps.validate.outputs.latest == 'true' }}
+        uses: peter-evans/dockerhub-description@v4.0.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: particular/servicecontrol-monitoring
+          readme-filepath: ./Container-README.md
+      - name: Update Docker Hub Description - RavenDB
+        #if: ${{ steps.validate.outputs.latest == 'true' }}
+        uses: peter-evans/dockerhub-description@v4.0.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: particular/servicecontrol-ravendb
+          readme-filepath: ./Container-README.md
