--- a/src/ServiceControl/App.config
+++ b/src/ServiceControl/App.config
@@ -13,7 +13,8 @@ These settings are only here so that we can debug ServiceControl while developin
     <add key="ServiceControl/AllowMessageEditing" value="true" />
 
     <!-- DEVS - Pick a transport to run Primary instance on -->
-    <add key="ServiceControl/TransportType" value="LearningTransport" />
+    <add key="ServiceControl/TransportType" value="MTRabbitMQ" />
+    <!--add key="ServiceControl/TransportType" value="LearningTransport" /-->
     <!--<add key="ServiceControl/TransportType" value="AmazonSQS" />-->
     <!--<add key="ServiceControl/TransportType" value="AzureStorageQueue" />-->
     <!--<add key="ServiceControl/TransportType" value="MSMQ" />-->
@@ -26,9 +27,13 @@ These settings are only here so that we can debug ServiceControl while developin
   <connectionStrings>
     <!-- DEVS - Pick a transport connection string to match chosen transport above -->
 
+    <!-- MassTransit RabbitMQ -->
+    <!-- If the LearningTransport connectionString is empty, it will default to the solution directory when running/debugging from the IDE -->
+    <add name="NServiceBus/Transport" connectionString="empty!!" />
+    
     <!-- Learning -->
     <!-- If the LearningTransport connectionString is empty, it will default to the solution directory when running/debugging from the IDE -->
-    <add name="NServiceBus/Transport" connectionString="" />
+    <!--add name="NServiceBus/Transport" connectionString="" /-->
 
     <!--Amazon SQS -->
     <!--<add name="NServiceBus/Transport" connectionString="Region=;QueueNamePrefix=;TopicNamePrefix=;AccessKeyId=;SecretAccessKey=;S3BucketForLargeMessages=;S3KeyPrefix=" />-->
